--- a/base.css
+++ b/base.css
@@ -2,9 +2,10 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-
+body{
+   background-color: black;
+}
 html,
-body,
 div,
 span,
 applet,
